--- a/index.html
+++ b/index.html
@@ -3,39 +3,163 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/96b15bae54.js" crossorigin="anonymous"></script>
     <title></title>
   </head>
   <body>
+    <!-- MACROBLOCCO---------->
     <main id="app">
+      <!-- PARTE SINISTRA -->
       <section id="navLeft">
         <div class="header">
-
+          <img src="img/RYEs-avatar_io.jpg" alt="">
+          <div class="iconeNav">
+            <i class="fas fa-circle-notch"></i>
+            <i class="fas fa-comment-alt"></i>
+            <i class="fas fa-ellipsis-v"></i>
+          </div>
         </div>
 
+        <!-- zona  notifiche -->
         <div id="zonaNotifiche">
-
+          <div id="alarm">
+            <i class="fas fa-bell-slash"></i>
+          </div>
+          <div>
+            <h3>
+              Ricevi notifiche di nuovi messaggi
+            </h3>
+            <h4>
+              <a href="#">
+              Attiva notifiche desktop</a>
+            </h4>
+          </div>
         </div>
 
+        <!-- zona cerca -->
         <div id="zonaCerca">
-
+          <div id="icona">
+            <i class="fas fa-search"></i>
+          </div>
+          <div id="spazioCerca">
+            <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
+          </div>
         </div>
 
+        <!-- zona lista chat -->
         <div id="listaChat">
+          <div class="contatto">
+            <img src="img/ceUU-avatar_1.jpg" alt="">
+            <div class="">
+              <h3>Michele</h3>
+              <h4>Non poteva essere altrimenti</h4>
+            </div>
+          </div>
+
+          <div class="contatto">
+            <img src="img/im1D-avatar_2.jpg" alt="">
+            <div class="">
+              <h3>Fabio</h3>
+              <h4>Non poteva essere altrimenti</h4>
+            </div>
+          </div>
+
+          <div class="contatto">
+            <img src="img/oAHF-avatar_3.jpg" alt="">
+            <div class="">
+              <h3>Samuele</h3>
+              <h4>Non poteva essere altrimenti</h4>
+            </div>
+          </div>
+
+          <div class="contatto">
+            <img src="img/D7Nb-avatar_4.jpg" alt="">
+            <div class="">
+              <h3>Alessandro B.</h3>
+              <h4>Non poteva essere altrimenti</h4>
+            </div>
+          </div>
+
+          <div class="contatto">
+            <img src="img/1HAp-avatar_5.jpg" alt="">
+            <div class="">
+              <h3>Alessandro L.</h3>
+              <h4>Non poteva essere altrimenti</h4>
+            </div>
+          </div>
+
+          <div class="contatto">
+            <img src="img/p75Q-avatar_6.jpg" alt="">
+            <div class="">
+              <h3>Claudia</h3>
+              <h4>Non poteva essere altrimenti</h4>
+            </div>
+          </div>
+
+          <div class="contatto">
+            <img src="img/qvLi-avatar_7.jpg" alt="">
+            <div class="">
+              <h3>Davide</h3>
+              <h4>Non poteva essere altrimenti</h4>
+            </div>
+          </div>
+
+          <div class="contatto">
+            <img src="img/EXTz-avatar_8.jpg" alt="">
+            <div class="">
+              <h3>Federico</h3>
+              <h4>Non poteva essere altrimenti</h4>
+            </div>
+          </div>
 
         </div>
 
       </section>
+
+      <!-- PARTE DESTRA ---------------->
       <section id="chatRight">
+        <!-- parte alta --------->
         <div class="header">
-
+          <!-- sinistra ---->
+          <div class="leftHeader">
+            <img src="img/ceUU-avatar_1.jpg" alt="">
+            <div class="leftHeaderInfo">
+              <h3>Michele</h3>
+              <h4>Ultimo accesso oggi alle 15.40</h4>
+            </div>
+          </div>
+          <!-- destra------------>
+          <div class="iconeNav">
+            <i class="fas fa-search"></i>
+            <i class="fas fa-paperclip"></i>
+            <i class="fas fa-ellipsis-v"></i>
+          </div>
         </div>
+        <!-- chat -->
         <div id="chat">
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Ciao come stai?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">08:41</span>
+          </div>
+          <div class="messaggio ricevuto">
+            <span class="testo-messaggio">Io sto bene, tu?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">19:07</span>
+          </div>
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Alla grande!</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">23:53</span>
+          </div>
 
         </div>
+        <!-- tastiera -->
         <div id="footer">
-
+          <i class="far fa-smile"></i>
+          <input type="text" name="" value="" placeholder="Scrivi un messaggio">
+          <i class="fas fa-microphone"></i>
         </div>
-
       </section>
     </main>
 
