aggiunta funzione invio messaggio

--- a/index.html
+++ b/index.html
@@ -157,10 +157,15 @@
         <!-- tastiera -->
         <div id="footer">
           <i class="far fa-smile"></i>
-          <input type="text" name="" value="" placeholder="Scrivi un messaggio">
+          <input type="text" name="" value="" placeholder="Scrivi un messaggio" id="inputRisposta">
           <i class="fas fa-microphone"></i>
         </div>
       </section>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+      <script type="text/javascript" src="main.js">
+
+      </script>
     </main>
 
   </body>
