BONUS: toggle icona microfono / tasto invio

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
           <i class="far fa-smile"></i>
           <input type="text" name="" value="" placeholder="Scrivi un messaggio" id="inputRisposta">
           <i class="fas fa-microphone"></i>
+          <i class="fab fa-telegram-plane"></i>
         </div>
       </section>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
