--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/96b15bae54.js" crossorigin="anonymous"></script>
-    <title></title>
+    <title>BoolzApp</title>
   </head>
   <body>
     <!-- MACROBLOCCO---------->
@@ -42,7 +42,7 @@
             <i class="fas fa-search"></i>
           </div>
           <div id="spazioCerca">
-            <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
+            <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat" id="inputCerca">
           </div>
         </div>
 
@@ -51,7 +51,7 @@
           <div class="contatto">
             <img src="img/ceUU-avatar_1.jpg" alt="">
             <div class="">
-              <h3>Michele</h3>
+              <h3 class="nomeContatto">Michele</h3>
               <h4>Non poteva essere altrimenti</h4>
             </div>
           </div>
@@ -59,7 +59,7 @@
           <div class="contatto">
             <img src="img/im1D-avatar_2.jpg" alt="">
             <div class="">
-              <h3>Fabio</h3>
+              <h3 class="nomeContatto">Fabio</h3>
               <h4>Non poteva essere altrimenti</h4>
             </div>
           </div>
@@ -67,7 +67,7 @@
           <div class="contatto">
             <img src="img/oAHF-avatar_3.jpg" alt="">
             <div class="">
-              <h3>Samuele</h3>
+              <h3 class="nomeContatto">Samuele</h3>
               <h4>Non poteva essere altrimenti</h4>
             </div>
           </div>
@@ -75,7 +75,7 @@
           <div class="contatto">
             <img src="img/D7Nb-avatar_4.jpg" alt="">
             <div class="">
-              <h3>Alessandro B.</h3>
+              <h3 class="nomeContatto">Alessandro B.</h3>
               <h4>Non poteva essere altrimenti</h4>
             </div>
           </div>
@@ -83,7 +83,7 @@
           <div class="contatto">
             <img src="img/1HAp-avatar_5.jpg" alt="">
             <div class="">
-              <h3>Alessandro L.</h3>
+              <h3 class="nomeContatto">Alessandro L.</h3>
               <h4>Non poteva essere altrimenti</h4>
             </div>
           </div>
@@ -91,7 +91,7 @@
           <div class="contatto">
             <img src="img/p75Q-avatar_6.jpg" alt="">
             <div class="">
-              <h3>Claudia</h3>
+              <h3 class="nomeContatto">Claudia</h3>
               <h4>Non poteva essere altrimenti</h4>
             </div>
           </div>
@@ -99,7 +99,7 @@
           <div class="contatto">
             <img src="img/qvLi-avatar_7.jpg" alt="">
             <div class="">
-              <h3>Davide</h3>
+              <h3 class="nomeContatto">Davide</h3>
               <h4>Non poteva essere altrimenti</h4>
             </div>
           </div>
@@ -107,7 +107,7 @@
           <div class="contatto">
             <img src="img/EXTz-avatar_8.jpg" alt="">
             <div class="">
-              <h3>Federico</h3>
+              <h3 class="nomeContatto">Federico</h3>
               <h4>Non poteva essere altrimenti</h4>
             </div>
           </div>
