--- a/index.html
+++ b/index.html
@@ -135,8 +135,30 @@
             <i class="fas fa-ellipsis-v"></i>
           </div>
         </div>
-        <!-- chat -->
-        <div id="chat">
+        <!-- BOX CHAT ------------------------------------------------------>
+        <div class="box-chat active">
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Ciao come stai?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">08:41</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
+          </div>
+          <div class="messaggio ricevuto">
+            <span class="testo-messaggio">Io sto bene, tu?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">19:07</span>
+          </div>
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Alla grande!</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">23:53</span>
+          </div>
+        </div>
+
+        <div class="box-chat">
           <div class="messaggio inviato">
             <span class="testo-messaggio">Ciao come stai?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
@@ -152,14 +174,126 @@
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
           </div>
-
         </div>
+
+        <div class="box-chat">
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Ciao come stai?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">08:41</span>
+          </div>
+          <div class="messaggio ricevuto">
+            <span class="testo-messaggio">Io sto bene, tu?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">19:07</span>
+          </div>
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Alla grande!</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">23:53</span>
+          </div>
+        </div>
+
+        <div class="box-chat">
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Ciao come stai?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">08:41</span>
+          </div>
+          <div class="messaggio ricevuto">
+            <span class="testo-messaggio">Io sto bene, tu?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">19:07</span>
+          </div>
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Alla grande!</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">23:53</span>
+          </div>
+        </div>
+
+        <div class="box-chat">
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Ciao come stai?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">08:41</span>
+          </div>
+          <div class="messaggio ricevuto">
+            <span class="testo-messaggio">Io sto bene, tu?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">19:07</span>
+          </div>
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Alla grande!</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">23:53</span>
+          </div>
+        </div>
+
+        <div class="box-chat">
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Ciao come stai?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">08:41</span>
+          </div>
+          <div class="messaggio ricevuto">
+            <span class="testo-messaggio">Io sto bene, tu?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">19:07</span>
+          </div>
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Alla grande!</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">23:53</span>
+          </div>
+        </div>
+
+        <div class="box-chat">
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Ciao come stai?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">08:41</span>
+          </div>
+          <div class="messaggio ricevuto">
+            <span class="testo-messaggio">Io sto bene, tu?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">19:07</span>
+          </div>
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Alla grande!</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">23:53</span>
+          </div>
+        </div>
+
+        <div class="box-chat">
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Ciao come stai?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">08:41</span>
+          </div>
+          <div class="messaggio ricevuto">
+            <span class="testo-messaggio">Io sto bene, tu?</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">19:07</span>
+          </div>
+          <div class="messaggio inviato">
+            <span class="testo-messaggio">Alla grande!</span>
+            <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
+            <span class="orario-messaggio">23:53</span>
+          </div>
+        </div>
+        <!----------------------------------------------------------------->
         <!-- tastiera -->
         <div id="footer">
-          <i class="far fa-smile"></i>
+          <div class="emoji">
+            <a href="#"><i class="far fa-smile"></i></a>
+          </div>
           <input type="text" name="" value="" placeholder="Scrivi un messaggio" id="inputRisposta">
-          <i class="fas fa-microphone"></i>
-          <i class="fab fa-telegram-plane"></i>
+          <div class="mic-e-invia">
+            <a href="#"><i class="fas fa-microphone"></i></a>
+            <a href="#"><i class="fab fa-telegram-plane"></i></a>
+          </div>
         </div>
       </section>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
