aggiunto evento compara menu opzioni messaggio

--- a/index.html
+++ b/index.html
@@ -150,11 +150,19 @@
             <span class="testo-messaggio">Io sto bene, tu?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">19:07</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio inviato">
             <span class="testo-messaggio">Alla grande!</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
         </div>
 
@@ -163,16 +171,28 @@
             <span class="testo-messaggio">Ciao come stai?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">08:41</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio ricevuto">
             <span class="testo-messaggio">Io sto bene, tu?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">19:07</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio inviato">
             <span class="testo-messaggio">Alla grande!</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
         </div>
 
@@ -181,16 +201,28 @@
             <span class="testo-messaggio">Ciao come stai?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">08:41</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio ricevuto">
             <span class="testo-messaggio">Io sto bene, tu?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">19:07</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio inviato">
             <span class="testo-messaggio">Alla grande!</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
         </div>
 
@@ -199,16 +231,28 @@
             <span class="testo-messaggio">Ciao come stai?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">08:41</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio ricevuto">
             <span class="testo-messaggio">Io sto bene, tu?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">19:07</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio inviato">
             <span class="testo-messaggio">Alla grande!</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
         </div>
 
@@ -217,16 +261,28 @@
             <span class="testo-messaggio">Ciao come stai?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">08:41</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio ricevuto">
             <span class="testo-messaggio">Io sto bene, tu?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">19:07</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio inviato">
             <span class="testo-messaggio">Alla grande!</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
         </div>
 
@@ -235,16 +291,28 @@
             <span class="testo-messaggio">Ciao come stai?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">08:41</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio ricevuto">
             <span class="testo-messaggio">Io sto bene, tu?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">19:07</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio inviato">
             <span class="testo-messaggio">Alla grande!</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
         </div>
 
@@ -253,16 +321,28 @@
             <span class="testo-messaggio">Ciao come stai?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">08:41</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio ricevuto">
             <span class="testo-messaggio">Io sto bene, tu?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">19:07</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio inviato">
             <span class="testo-messaggio">Alla grande!</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
         </div>
 
@@ -271,16 +351,28 @@
             <span class="testo-messaggio">Ciao come stai?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">08:41</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio ricevuto">
             <span class="testo-messaggio">Io sto bene, tu?</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">19:07</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
           <div class="messaggio inviato">
             <span class="testo-messaggio">Alla grande!</span>
             <span class="freccetta-info"><i class="fas fa-chevron-down"></i></span>
             <span class="orario-messaggio">23:53</span>
+            <ul class="box-opzioni-messaggio">
+              <li id="info-messaggio">Info messaggio</li>
+              <li id="cancella-messaggio">Cancella messaggio</li>
+            </ul>
           </div>
         </div>
         <!----------------------------------------------------------------->
