cambio info nell’header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- zona lista chat -->
         <div id="listaChat">
           <div class="contatto">
-            <img src="img/ceUU-avatar_1.jpg" alt="">
+            <img src="img/ceUU-avatar_1.jpg" alt="" id="immagine-contatto">
             <div class="">
               <h3 class="nomeContatto">Michele</h3>
               <h4>Non poteva essere altrimenti</h4>
@@ -57,7 +57,7 @@
           </div>
 
           <div class="contatto">
-            <img src="img/im1D-avatar_2.jpg" alt="">
+            <img src="img/im1D-avatar_2.jpg" alt="" id="immagine-contatto">
             <div class="">
               <h3 class="nomeContatto">Fabio</h3>
               <h4>Non poteva essere altrimenti</h4>
@@ -65,7 +65,7 @@
           </div>
 
           <div class="contatto">
-            <img src="img/oAHF-avatar_3.jpg" alt="">
+            <img src="img/oAHF-avatar_3.jpg" alt="" id="immagine-contatto">
             <div class="">
               <h3 class="nomeContatto">Samuele</h3>
               <h4>Non poteva essere altrimenti</h4>
@@ -73,7 +73,7 @@
           </div>
 
           <div class="contatto">
-            <img src="img/D7Nb-avatar_4.jpg" alt="">
+            <img src="img/D7Nb-avatar_4.jpg" alt="" id="immagine-contatto">
             <div class="">
               <h3 class="nomeContatto">Alessandro B.</h3>
               <h4>Non poteva essere altrimenti</h4>
@@ -81,7 +81,7 @@
           </div>
 
           <div class="contatto">
-            <img src="img/1HAp-avatar_5.jpg" alt="">
+            <img src="img/1HAp-avatar_5.jpg" alt="" id="immagine-contatto">
             <div class="">
               <h3 class="nomeContatto">Alessandro L.</h3>
               <h4>Non poteva essere altrimenti</h4>
@@ -89,7 +89,7 @@
           </div>
 
           <div class="contatto">
-            <img src="img/p75Q-avatar_6.jpg" alt="">
+            <img src="img/p75Q-avatar_6.jpg" alt="" id="immagine-contatto">
             <div class="">
               <h3 class="nomeContatto">Claudia</h3>
               <h4>Non poteva essere altrimenti</h4>
@@ -97,7 +97,7 @@
           </div>
 
           <div class="contatto">
-            <img src="img/qvLi-avatar_7.jpg" alt="">
+            <img src="img/qvLi-avatar_7.jpg" alt="" id="immagine-contatto">
             <div class="">
               <h3 class="nomeContatto">Davide</h3>
               <h4>Non poteva essere altrimenti</h4>
@@ -105,7 +105,7 @@
           </div>
 
           <div class="contatto">
-            <img src="img/EXTz-avatar_8.jpg" alt="">
+            <img src="img/EXTz-avatar_8.jpg" alt="" id="immagine-contatto">
             <div class="">
               <h3 class="nomeContatto">Federico</h3>
               <h4>Non poteva essere altrimenti</h4>
@@ -122,10 +122,10 @@
         <div class="header">
           <!-- sinistra ---->
           <div class="leftHeader">
-            <img src="img/ceUU-avatar_1.jpg" alt="">
+            <img src="img/ceUU-avatar_1.jpg" alt="" id="immagine-utente-aperto">
             <div class="leftHeaderInfo">
-              <h3>Michele</h3>
-              <h4>Ultimo accesso oggi alle 15.40</h4>
+              <h3 id="contatto-aperto">Michele</h3>
+              <h4 id="ultimo-accesso">Ultimo accesso oggi alle 15.40</h4>
             </div>
           </div>
           <!-- destra------------>
